[gd_scene load_steps=7 format=3 uid="uid://dq8gk2xv1r27a"]

[ext_resource type="PackedScene" uid="uid://d4cw6v7fo0k5s" path="res://scenes/nonogram_squares.tscn" id="1_4p2ab"]
[ext_resource type="Script" path="res://scripts/board.gd" id="1_qoyos"]
[ext_resource type="Script" path="res://scripts/x_header_row.gd" id="3_22eos"]
[ext_resource type="Script" path="res://scripts/y_header_col.gd" id="4_cnhxs"]
[ext_resource type="Script" path="res://scripts/x_footer_row.gd" id="5_erpr3"]
[ext_resource type="Script" path="res://scripts/y_footer_col.gd" id="6_uo5n4"]

[node name="CenterContainer" type="CenterContainer" node_paths=PackedStringArray("nonogram_scroll_container", "nonogram_squares", "header_row", "header_col", "footer_row", "footer_col")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qoyos")
nonogram_scroll_container = NodePath("NonogramBoard/CenterCell/NonogramScrollContainer")
nonogram_squares = NodePath("NonogramBoard/CenterCell/NonogramScrollContainer/NonogramSquares")
header_row = NodePath("NonogramBoard/CenterCell/XHeaderRow")
header_col = NodePath("NonogramBoard/LeftEdge/YHeaderCol")
footer_row = NodePath("NonogramBoard/CenterCell/XFooterRow")
footer_col = NodePath("NonogramBoard/RightEdge/YFooterCol")

[node name="NonogramBoard" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LeftEdge" type="VBoxContainer" parent="NonogramBoard"]
layout_mode = 2

[node name="TopLeft" type="Control" parent="NonogramBoard/LeftEdge"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="YHeaderCol" type="VBoxContainer" parent="NonogramBoard/LeftEdge"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("4_cnhxs")

[node name="BottomLeft" type="Control" parent="NonogramBoard/LeftEdge"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="CenterCell" type="VBoxContainer" parent="NonogramBoard"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XHeaderRow" type="HBoxContainer" parent="NonogramBoard/CenterCell"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("3_22eos")

[node name="NonogramScrollContainer" type="ScrollContainer" parent="NonogramBoard/CenterCell"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 2
vertical_scroll_mode = 2

[node name="NonogramSquares" parent="NonogramBoard/CenterCell/NonogramScrollContainer" instance=ExtResource("1_4p2ab")]
layout_mode = 2

[node name="XFooterRow" type="HBoxContainer" parent="NonogramBoard/CenterCell"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("5_erpr3")

[node name="RightEdge" type="VBoxContainer" parent="NonogramBoard"]
layout_mode = 2

[node name="TopRight" type="Control" parent="NonogramBoard/RightEdge"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="YFooterCol" type="VBoxContainer" parent="NonogramBoard/RightEdge"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("6_uo5n4")

[node name="BottomRight" type="Control" parent="NonogramBoard/RightEdge"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[connection signal="resized" from="NonogramBoard" to="NonogramBoard" method="_on_resized"]
[connection signal="scroll_ended" from="NonogramBoard/CenterCell/NonogramScrollContainer" to="NonogramBoard/CenterCell/NonogramScrollContainer" method="_on_scroll_ended"]
[connection signal="scroll_started" from="NonogramBoard/CenterCell/NonogramScrollContainer" to="NonogramBoard/CenterCell/NonogramScrollContainer" method="_on_scroll_started"]
